# phong

./: CMakeLists.txt  LICENSE
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: game.c  game.h  main.c  matrix.c  matrix.h  renderer.c  renderer.h
